# lingopilot-tts-piper

./: .gitignore  AGENTS.md  BACKLOG.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.txt  VALIDATED_BASELINE.md  build.rs  build_windows.ps1  release-sources.toml
.github/workflows/: ci.yml  release.yml
docs/: adr-health-ping.md  adr-parity-alignment.md  adr-production-readiness.md  environment-variable-neutrality.md  vendor-espeak-rs-sys.md
scripts/: Assert-OrtPinParity.ps1  Assert-ReleaseSidecarChecksum.ps1  Assert-ReleaseTagMatchesVersion.ps1  Download-RealVoiceFixture.ps1  Generate-PhonemeBaseline.ps1  Install-OnnxRuntime.ps1  Package-WindowsRelease.ps1  Publish-ReleaseTag.ps1  ReleaseSources.Common.ps1  Set-WindowsBuildEnv.ps1  Test-AudibleE2E.ps1  Test-EightLanguages.ps1  Test-PackagedRuntimeSynthesis.ps1  Test-RealVoiceFixture.ps1  Test-WindowsReleaseArchive.ps1  Verify-PublishedRelease.ps1  Verify-Readiness.ps1
src/: main.rs  phonemize.rs  protocol.rs  synthesis.rs
tests/: ping_contract.rs  request_contract.rs
tests/fixtures/: phoneme_baseline_v0_1_5.json
